# QuantEdge

./: .gitignore  README.md
backend/: backtest.py  daily_digest.py  main.py  market_data.py  news.py  notify.py  pyproject.toml  regime.py  test_gemini.py  test_genai.py  test_signals.py  worldstate.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: world-dots.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ArchitectureModal.css  ArchitectureModal.tsx  ETFCard.css  ETFCard.tsx  MarketMap.css  MarketMap.tsx  NavTabs.css  NavTabs.tsx  RegimeBanner.css  RegimeBanner.tsx
frontend/src/config/: exchanges.ts
frontend/src/hooks/: useMarketData.ts
frontend/src/lib/: marketHours.check.ts  marketHours.ts  watchlist.ts
frontend/src/pages/: Dashboard.css  Dashboard.tsx  WorldMap.css  WorldMap.tsx
frontend/src/styles/: animations.css  global.css
