[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.73.1",
    "pandas>=3.0.2",
    "polygon-api-client>=1.16.3",
    "ta>=0.11.0",
    "websockets>=16.0",
]
